--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mufin/comgate-bundle",
+    "name": "pkoznar/comgate-bundle",
     "description": "",
     "type": "symfony-bundle",
     "license": "MIT",
